updated index and styles

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* CSS Document */
 body {
-background: black;
+background: #120027;
 color: #fff;
 font-family: 'Poppins', sans-serif;
 font-size: 15px;
