--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,7 @@ font-family: 'Poppins', sans-serif;
 font-size: 86px;
 font-weight: bolder;
 letter-spacing: normal;
+text-align: center;
 }
 h3 {
 color: #fff;
@@ -60,4 +61,5 @@ font-family: 'Poppins', sans-serif;
 font-size: 48px;
 font-weight: normal;
 letter-spacing: normal;
+text-align: center;
 }
