--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ a
 .vcenter
 {
   border-collapse: collapse;
-  margin: auto;
+  margin: 1;
   width: 100%;
   height: 100%;
   vertical-align: middle;
