--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ html, body
 {
 margin: 0;
 padding: 0;
-background-color: black;
+background-color: #000000;
 background-image: url('assets/indexBackground.png');
 color: white;
 height: 100%;
