--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ html, body
 margin: 0;
 padding: 0;
 background-color: #000000;
-background-image: url('assets/indexBackground.png');
+background-image: url('assets/indexBackground.jpg');
 color: white;
 height: 100%;
 font-family: 'Poppins', sans-serif;
