--- a/styles/index.css
+++ b/styles/index.css
@@ -7,7 +7,7 @@ background-color: #000000;
 background-image: url('https://fifthsplit.com/assets/indexBackground.jpg');
 color: white;
 height: 100%;
-font-family: 'Poppins', sans-serif;
+font-family: 'Atkinson Hyperlegible', sans-serif;
 text-align: center;
 }
 .logo
