--- a/newSite/styles/styles.css
+++ b/newSite/styles/styles.css
@@ -13,6 +13,7 @@ li, a, button {
     font-size: 16px;
     color: #ecf0f1;
     text-decoration: none;
+    background-color: #24252A;
 }
 
 header {
