--- a/newSite/styles/styles.css
+++ b/newSite/styles/styles.css
@@ -38,6 +38,7 @@ header {
 .nav__links li {
     display: inline-block;
     padding: 0px 20px;
+    background-color: #24252A;
 }
 
 .nav__links li a {
