--- a/newSite/styles/styles.css
+++ b/newSite/styles/styles.css
@@ -61,3 +61,15 @@ button {
 button:hover {
     background-color: rgba(0, 136, 139, 0.8);
 }
+
+.h1 {
+    font-family: "Atkinson Hyperlegible", sans-serif;
+    font-size: 64px;
+    font-weight: bold;
+}
+
+.p {
+    font-family: "Atkinson Hyperlegible", sans-serif;
+    font-size: 24px;
+    font-weight: 400;
+}
