--- a/newSite/styles/styles.css
+++ b/newSite/styles/styles.css
@@ -62,13 +62,13 @@ button:hover {
     background-color: rgba(0, 136, 139, 0.8);
 }
 
-.h1 {
+h1 {
     font-family: "Atkinson Hyperlegible", sans-serif;
     font-size: 64px;
     font-weight: bold;
 }
 
-.p {
+p {
     font-family: "Atkinson Hyperlegible", sans-serif;
     font-size: 24px;
     font-weight: 400;
