--- a/newSite/styles/styles.css
+++ b/newSite/styles/styles.css
@@ -7,6 +7,10 @@
     background-color: #ffffff;
 }
 
+html, body {
+    margin: auto;
+}
+
 li, a, button {
     font-family: "Atkinson Hyperlegible", sans-serif;
     font-weight: 400;
