--- a/newSite/styles/styles.css
+++ b/newSite/styles/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;1,700&display=swap');
 
 * {
     box-sizing: border-box;
