--- a/newSite/styles/styles.css
+++ b/newSite/styles/styles.css
@@ -72,6 +72,7 @@ h1 {
     font-family: "Atkinson Hyperlegible", sans-serif;
     font-size: 64px;
     font-weight: bold;
+    font-style: italic;
 }
 
 p {
