--- a/newSite/styles/styles.css
+++ b/newSite/styles/styles.css
@@ -8,9 +8,9 @@
 }
 
 main {
-    padding-left: 60px;
-    padding-right: 60px;
-    padding-top: 30px;
+    padding-left: 15%;
+    padding-right: 15%;
+    padding-top: 2%;
 }
 
 li, a, button {
