--- a/newSite/styles/styles.css
+++ b/newSite/styles/styles.css
@@ -16,7 +16,7 @@ main {
 li, a, button {
     font-family: "Atkinson Hyperlegible", sans-serif;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 1em;
     color: #ecf0f1;
     text-decoration: none;
     background-color: #24252A;
@@ -73,7 +73,7 @@ button {
     font-family: "Atkinson Hyperlegible", sans-serif;
     font-weight: bold;
     font-style: italic;
-    font-size: 24px;
+    font-size: 1.1em;
     color: #ecf0f1;
     text-decoration: none;
 }
@@ -84,14 +84,14 @@ button:hover {
 
 h1 {
     font-family: "Atkinson Hyperlegible", sans-serif;
-    font-size: 64px;
+    font-size: 4em;
     font-weight: bold;
     font-style: italic;
 }
 
 p {
     font-family: "Atkinson Hyperlegible", sans-serif;
-    font-size: 24px;
+    font-size: 1.1em;
     font-weight: 400;
 }
 
