--- a/newSite/styles/styles.css
+++ b/newSite/styles/styles.css
@@ -112,7 +112,7 @@ p {
   }
 
 img {
-    border: 5px #24252A;
+    border: 5px solid #24252A;
     border-radius: 8px;
     padding: 3px;
     margin: 5px;
