--- a/festival-information-specialist/styles/styles.css
+++ b/festival-information-specialist/styles/styles.css
@@ -121,5 +121,6 @@ img {
 table {
     text-align: left;
     vertical-align: middle;
-    max-width: 50em
+    max-width: 50em;
+    font-family: "Atkinson Hyperlegible", sans-serif;
 }
