--- a/festival-information-specialist/styles/styles.css
+++ b/festival-information-specialist/styles/styles.css
@@ -123,4 +123,5 @@ table {
     vertical-align: middle;
     max-width: 50em;
     font-family: "Atkinson Hyperlegible", sans-serif;
+    border-spacing: 1.1em
 }
