--- a/festival-information-specialist/styles/404.css
+++ b/festival-information-specialist/styles/404.css
@@ -6,14 +6,17 @@
     padding: 0;
 }
 
+body {
+    background-image: url('/festival-information-specialist/images/404.png');
+background-repeat: no-repeat;
+background-attachment: fixed;
+background-size: cover;
+}
+
 main {
     padding-left: 15%;
     padding-right: 15%;
     padding-top: 2%;
-    background-image: url('/festival-information-specialist/images/404.png');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
 }
 
 li, a, button {
