--- a/styles/styles.css
+++ b/styles/styles.css
@@ -132,6 +132,14 @@ h1 {
     font-style: italic;
 }
 
+h2 {
+    font-family: "charterbold", sans-serif;
+    font-size: 3em;
+    font-weight: bold;
+    font-style: italic;
+}
+
+
 p {
     font-family: "charter", sans-serif;
     font-size: 1.1em;
