--- a/styles/styles.css
+++ b/styles/styles.css
@@ -43,6 +43,29 @@
 
 }
 
+
+@font-face {
+    font-family: 'classic_cobraregular';
+    src: url('classiccobra-webfont.woff2') format('woff2'),
+         url('classiccobra-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'classic_cobra_extra-condXCnIt';
+    src: url('classiccobraxtracondital-webfont.woff2') format('woff2'),
+         url('classiccobraxtracondital-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -125,13 +148,13 @@ button:hover {
 }
 
 h1 {
-    font-family: "charterbold", sans-serif;
+    font-family: "classic_cobraregular", sans-serif;
     font-size: 4em;
     font-weight: bold;
 }
 
 h2 {
-    font-family: "charterbold", sans-serif;
+    font-family: "classic_cobraregular", sans-serif;
     font-size: 3em;
     font-weight: bold;
 }
