--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,700;0,900;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,300;0,700;0,900;1,400;1,700&display=swap');
 
 * {
     box-sizing: border-box;
@@ -71,7 +71,7 @@ button {
     cursor: pointer;
     transition: all 0.3s ease 0s;
     font-family: "Fira Sans", sans-serif;
-    font-weight: bold;
+    font-weight: 700;
     font-size: 1.1em;
     color: #ecf0f1;
     text-decoration: none;
@@ -84,20 +84,20 @@ button:hover {
 h1 {
     font-family: "Fira Sans", sans-serif;
     font-size: 4em;
-    font-weight: bolder;
+    font-weight: 900;
 }
 
 h2 {
     font-family: "Fira Sans", sans-serif;
     font-size: 3em;
-    font-weight: bold;
+    font-weight: 700;
 }
 
 
 p {
     font-family: "Fira Sans", sans-serif;
     font-size: 1.1em;
-    font-weight: 400;
+    font-weight: 300;
 }
 
 #page-container {
