--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,300;0,700;0,900;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Zilla+Slab:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 
 * {
     box-sizing: border-box;
@@ -14,7 +14,7 @@ main {
 }
 
 li, a, button {
-    font-family: "Fira Sans", sans-serif;
+    font-family: 'Zilla Slab', serif;
     font-weight: 400;
     font-size: 1em;
     color: #ecf0f1;
@@ -70,7 +70,7 @@ button {
     border-radius: 8px;
     cursor: pointer;
     transition: all 0.3s ease 0s;
-    font-family: "Fira Sans", sans-serif;
+    font-family: 'Zilla Slab', serif;
     font-weight: 700;
     font-size: 1.1em;
     color: #ecf0f1;
@@ -82,20 +82,20 @@ button:hover {
 }
 
 h1 {
-    font-family: "Fira Sans", sans-serif;
+    font-family: 'Zilla Slab', serif;
     font-size: 4em;
-    font-weight: 900;
+    font-weight: 700;
 }
 
 h2 {
-    font-family: "Fira Sans", sans-serif;
+    font-family: 'Zilla Slab', serif;
     font-size: 3em;
     font-weight: 700;
 }
 
 
 p {
-    font-family: "Fira Sans", sans-serif;
+    font-family: 'Zilla Slab', serif;
     font-size: 1.1em;
     font-weight: 300;
 }
@@ -127,6 +127,6 @@ table {
     text-align: left;
     vertical-align: middle;
     max-width: 50em;
-    font-family: "Fira Sans", sans-serif;
+    font-family: 'Zilla Slab', serif;
     border-spacing: 1.1em
 }
