--- a/styles/styles.css
+++ b/styles/styles.css
@@ -92,7 +92,7 @@ h2 {
     font-family: 'Zilla Slab', serif;
     font-size: 3em;
     font-weight: 700;
-    color #ffffff;
+    color: #ffffff;
 }
 
 
