--- a/festival-information-specialist/styles/styles.css
+++ b/festival-information-specialist/styles/styles.css
@@ -13,13 +13,21 @@ main {
     padding-top: 2%;
 }
 
-li, a, button {
-    font-family: "Atkinson Hyperlegible", sans-serif;
+li, button {
+    font-family: 'Atkinson Hyperlegible', serif;
     font-weight: 400;
     font-size: 1em;
     color: #ecf0f1;
     text-decoration: none;
     background-color: #24252A;
+}
+
+a {
+    font-family: 'Atkinson Hyperlegible', serif;
+    font-weight: 400;
+    font-size: 1em;
+    color: #ecf0f1;
+    text-decoration: none;
 }
 
 header {
@@ -88,6 +96,14 @@ h1 {
     font-weight: bold;
     font-style: italic;
 }
+
+h2 {
+    font-family: "Atkinson Hyperlegible", sans-serif;
+    font-size: 2.5em;
+    font-weight: bold;
+    font-style: italic;
+}
+
 
 p {
     font-family: "Atkinson Hyperlegible", sans-serif;
