--- a/festival-information-specialist/styles/styles.css
+++ b/festival-information-specialist/styles/styles.css
@@ -13,14 +13,6 @@ main {
     padding-top: 2%;
 }
 
-h2 {
-    font-family: "Atkinson Hyperlegible", sans-serif;
-    font-size: 2.5em;
-    font-weight: bold;
-    font-style: italic;
-    color: black;
-}
-
 li, a, button {
     font-family: "Atkinson Hyperlegible", sans-serif;
     font-weight: 400;
@@ -97,6 +89,15 @@ h1 {
     font-style: italic;
 }
 
+h2 {
+    font-family: "Atkinson Hyperlegible", sans-serif;
+    font-size: 2.5em;
+    font-weight: bold;
+    font-style: italic;
+    color: black;
+}
+
+
 p {
     font-family: "Atkinson Hyperlegible", sans-serif;
     font-size: 1.1em;
@@ -132,4 +133,12 @@ table {
     max-width: 50em;
     font-family: "Atkinson Hyperlegible", sans-serif;
     border-spacing: 1.1em
+}
+
+.social {
+    font-family: "Atkinson Hyperlegible", sans-serif;
+    font-weight: 400;
+    font-size: 2.5em;
+    color: #000000;
+    text-decoration: none;
 }
