--- a/festival-information-specialist/styles/styles.css
+++ b/festival-information-specialist/styles/styles.css
@@ -144,3 +144,13 @@ table {
     background-color: #ffffff;
     padding-left: 15%;
 }
+
+.iconHolder {
+    float: right;
+    width: 25vw;
+    height: 100%;
+}
+
+.icon {
+    height: 80%;
+}
