--- a/festival-information-specialist/styles/styles.css
+++ b/festival-information-specialist/styles/styles.css
@@ -149,8 +149,12 @@ table {
     float: right;
     width: 25vw;
     height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 .icon {
     height: 80%;
+    aspect-ratio: 1;
 }
