--- a/festival-information-specialist/styles/styles.css
+++ b/festival-information-specialist/styles/styles.css
@@ -150,7 +150,7 @@ table {
     width: 25vw;
     height: 100%;
     display: flex;
-    align-items: center;
+    align-items: right;
     justify-content: space-evenly;
 }
 
