--- a/festival-information-specialist/styles/styles.css
+++ b/festival-information-specialist/styles/styles.css
@@ -152,6 +152,7 @@ table {
     display: flex;
     align-items: right;
     justify-content: space-evenly;
+    background-color: #24252A;
 }
 
 .icon {
