--- a/festival-information-specialist/styles/styles.css
+++ b/festival-information-specialist/styles/styles.css
@@ -34,7 +34,7 @@ footer {
     display: flex;
     justify-content: space-between;
     align-items: right;
-    padding: 15px 15%;
+    padding-left: 15%;
     background-color: #24252A;
 }
 
@@ -147,7 +147,7 @@ table {
 
 .iconHolder {
     float: right;
-    width: 25vw;
+    width: 35vw;
     height: 100%;
     display: flex;
     align-items: right;
