--- a/festival-information-specialist/styles/styles.css
+++ b/festival-information-specialist/styles/styles.css
@@ -150,7 +150,7 @@ table {
     width: 35vw;
     height: 100%;
     display: flex;
-    align-items: right;
+    align-items: flex-end;
     justify-content: space-evenly;
     background-color: #24252A;
 }
@@ -163,4 +163,5 @@ table {
     padding: 0px;
     margin: 0px;
     background-color: #24252A;
+    align-items: flex-end;
 }
