--- a/festival-information-specialist/styles/styles.css
+++ b/festival-information-specialist/styles/styles.css
@@ -147,10 +147,10 @@ table {
 
 .iconHolder {
     float: right;
-    width: 35vw;
+    width: 30vw;
     height: 100%;
     display: flex;
-    align-items: flex-end;
+    align-items: center;
     justify-content: space-evenly;
     background-color: #24252A;
 }
@@ -163,5 +163,5 @@ table {
     padding: 0px;
     margin: 0px;
     background-color: #24252A;
-    align-items: flex-end;
+    align-items: center;
 }
