--- a/festival-information-specialist/styles/404.css
+++ b/festival-information-specialist/styles/404.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-image: url('/festival-information-specialist/images/404.png');
+    background-image: url('/assets/404-background.jpg');
 background-repeat: no-repeat;
 background-attachment: fixed;
 background-size: cover;
