--- a/base.css
+++ b/base.css
@@ -8,12 +8,12 @@ body {
 
 h1 {
 font-family: 'Sofia Sans', sans-serif;
-font-size: 16px;
+font-size: 35vw;
 font-weight: 700;
 }
 
 h2 {
     font-family: 'Sofia Sans', sans-serif;
-    font-size: 12px;
+    font-size: 25vw;
     font-weight: 400;
 }
