--- a/base.css
+++ b/base.css
@@ -8,12 +8,12 @@ body {
 
 h1 {
 font-family: 'Sofia Sans', sans-serif;
-font-size: 5vw;
+font-size: 4.8rem;
 font-weight: 700;
 }
 
 h2 {
     font-family: 'Sofia Sans', sans-serif;
-    font-size: 2vw;
+    font-size: 2.4rem;
     font-weight: 400;
 }
