--- a/base.css
+++ b/base.css
@@ -1,9 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Sofia+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 body {
-    padding-left: 15%;
-    padding-right: 15%;
-    padding-top: 2%;
+margin: 5vw;
 }
 
 h1 {
