--- a/base.css
+++ b/base.css
@@ -22,6 +22,19 @@ label.logo {
 
 }
 
-nav.ul {
+nav ul {
+float: right;
+margin-right: 20px;
+}
 
+nav ul li {
+    display: inline-block;
+    line-height: 80px;
+    margin: 0 5px;
+}
+
+nav ul li a {
+    color: white;
+    font-size: 17px;
+    
 }
