--- a/base.css
+++ b/base.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Sofia+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;1,700&display=swap');
 
 * {
     padding: 0;
@@ -21,6 +21,7 @@ nav {
 label.logo img{
     max-height: 55px;
     max-width: fit-content;
+
 }
 
 nav ul {
