--- a/base.css
+++ b/base.css
@@ -21,7 +21,8 @@ nav {
 .logo {
     max-height: 55px;
     max-width: fit-content;
-    vertical-align: middle;
+    display: flex;
+    align-items: center;
 }
 
 nav ul {
