--- a/base.css
+++ b/base.css
@@ -17,7 +17,9 @@ nav {
     height: 80px;
     width: 100%;
     display: flex;
+    justify-content: space-between;
     align-items: center;
+    padding: 15px 15%;
 }
 
 .logo {
